--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -114,7 +114,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
-  padding: 12px 20px;
+  padding: 8px;
   border: 2px solid transparent;
   border-radius: 12px;
   font-size: 14px;
@@ -161,6 +161,14 @@
   width: 320px;
   background: transparent;
   overflow: hidden;
+}
+
+.top-editor-section{
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+  overflow: hidden;
+  min-height: 0;
 }
 
 .editor-section {
@@ -246,6 +254,9 @@
     display: flex;
     flex-direction: column;
   }
+
+  
+
   
   .app-header {
     padding: 15px 20px;
