--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -65,6 +65,11 @@
   color: #667eea;
 }
 
+.logo-image {
+  width: 45px;
+  height: 45px;
+}
+
 .header-left h1 {
   font-size: 28px;
   font-weight: 700;
@@ -73,6 +78,27 @@
   -webkit-text-fill-color: transparent;
   background-clip: text;
   margin: 0;
+}
+
+.header-right{
+  display: "flex" ;
+  align-items: "center";
+  gap: 24px ;
+}
+
+.new-note-btn {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  color: white;
+  border-radius: 16px;
+  border: none;
+  font-weight: 600;
+  font-size: 18px;
+  padding: 16px 32px;
+  box-shadow: 0 4px 24px rgba(102, 126, 234, 0.1);
+  cursor: pointer;
 }
 
 .search-container {
@@ -334,18 +360,29 @@
   
   .app-header {
     padding: 12px 16px;
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: stretch;
   }
   
   .header-left {
-    flex-direction: column;
+    /* flex-direction: column; */
     align-items: flex-start;
     gap: 12px;
+  }
+
+  .header-left h1 {
+    font-size: 18px;
+  }
+
+  .new-note-btn{
+    height: 40px;
+    font-size: 15px;
   }
   
   .search-input {
     width: 100%;
+    font-size: 12px;
+    height: 40px;
   }
   
   .notes-section {
